@@ -56,6 +56,8 @@ Changes
   * analysis.helanal.helanal_trajectory() and helanal_main() now use a
     logger at level INFO to output all their computed values instead
     of printing to stdout
+  * default offset for ProgressMeter was changed from 0 to 1 (to match
+    the change from 1- to 0-based ts.frame counting)
 
 Fixes
 
